# YourSpace

./: .env  Log-2024-03-29-042021.772896.xlsx  main.py  pyproject.toml  requirements.txt
app/: __init__.py  decorators.py  forms.py  helpers.py  models.py  routes.py
app/templates/: about.html  add_customer.html  add_customer_external.html  add_institute.html  add_job.html  add_log.html  add_package.html  add_pricing_rule.html  add_space.html  add_subscription.html  add_user.html  change_password.html  customers.html  dashboard.html  delete_user.html  details_package.html  details_subscription.html  edit_customer.html  edit_institute.html  edit_job.html  edit_log.html  edit_package.html  edit_pricing_rule.html  edit_space.html  edit_subscription.html  edit_user.html  home.html  institutes.html  jobs.html  login.html  logs.html  master.html  packages.html  pricing_rules.html  spaces.html  subscriptions.html  users.html
migrations/versions/: 1288c7df8502_log_update4.py  1cc8b0991502_space_and_package.py  25ea6eb38896_packages2.py  2d298e89eddb_pricingrule4.py  33f12728c509_space_packages3.py  3bb2cdcfa41f_subscription_log.py  405a88d83e54_subscription_customer.py  691a0302c685_pricingrule2.py  73cb44f4f599_customer_user_id.py  8155ccb456f2_customers_data.py  84252ce7c1e5_your_space_tables.py  a5ea40d22d1a_isadmin.py  ac7b5999aab2_pricing_rule.py  acc2774e91d7_packages_space.py  b1ad4ef3bf58_pricing_less_than.py  b6ce341797a9_pricingrule.py  b8215cabd16a_jobs3.py  bf3eb381039d_pricingrule4.py  c76e6f34a136_packages.py  cce59558888c_jobs.py  d0d6cfedf0ae_space_photo.py  (+1 more)
(+2 files in other folders)
